--- a/app/src/main/res/layout/activity_learn_page.xml
+++ b/app/src/main/res/layout/activity_learn_page.xml
@@ -31,7 +31,8 @@
 
         <HorizontalScrollView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingEnd="10dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
