--- a/app/src/main/res/layout/range_random_word_input_dialog.xml
+++ b/app/src/main/res/layout/range_random_word_input_dialog.xml
@@ -10,14 +10,17 @@
         android:orientation="horizontal">
 
         <EditText
+            android:digits="1234567890"
+            android:id="@+id/minRange"
+            android:paddingStart="15dp"
+            android:paddingEnd="5dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.45"
-            android:background="@drawable/word_range_fillet"
+            android:background="@drawable/word_range_min_selector"
             android:gravity="center"
             android:hint="最小值"
             android:singleLine="true"
-            android:textColor="@color/colorFalseColor"
             android:textSize="20sp"
              />
 
@@ -31,14 +34,17 @@
             android:textSize="25sp" />
 
         <EditText
+            android:digits="1234567890"
+            android:id="@+id/maxRange"
+            android:paddingEnd="15dp"
+            android:paddingStart="5dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.45"
-            android:background="@drawable/word_range_fillet"
+            android:background="@drawable/word_range_max_selector"
             android:gravity="center"
             android:hint="最大值"
             android:singleLine="true"
-            android:textColor="@color/colorFalseColor"
             android:textSize="20sp"
              />
 
