--- a/app/src/main/res/layout/change_mod_pop.xml
+++ b/app/src/main/res/layout/change_mod_pop.xml
@@ -46,5 +46,13 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/colorNotChooseJsonCheckBoxBlue" />
-
+    <TextView
+        android:id="@+id/preViewEnglish"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="预览英文"
+        android:background="@drawable/pre_view_english_mod_fillet"
+        android:textColor="@color/colorBlack"
+        android:textSize="16sp" />
 </LinearLayout>
