--- a/app/src/main/res/layout/start_table_layout.xml
+++ b/app/src/main/res/layout/start_table_layout.xml
@@ -7,37 +7,27 @@
     <LinearLayout
         android:id="@+id/restoreTheScene"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:background="@drawable/json_linear_layout_not_choose"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:gravity="center"
-            android:text="还原现场"
-            android:textColor="@color/colorBlack"
-            android:textSize="30sp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/basic"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="Core" />
-
+            android:layout_weight="0.7"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="还原现场"
+            android:textColor="@color/colorBlack"
+            android:textSize="28sp" />
         <Button
             android:id="@+id/searchWord"
             android:layout_width="0dp"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="0.3"
             android:text="搜索单词"
             android:textColor="@color/colorChooseJsonButtonRed"/>
     </LinearLayout>
-
-
 
     <TableRow>
 
