--- a/app/src/main/res/layout/activity_chose_music_button.xml
+++ b/app/src/main/res/layout/activity_chose_music_button.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/musicButton">
 
     <View
         android:layout_width="match_parent"
@@ -12,7 +13,6 @@
         android:background="#90909090" />
 
     <LinearLayout
-        android:id="@+id/musicButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="作者名称"
+                android:textColor="@color/colorGray"
                 android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
