--- a/app/src/main/res/layout/activity_search_pop.xml
+++ b/app/src/main/res/layout/activity_search_pop.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/search_fillet"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.cnsukidayo.englishtoolandroid.myview.WrapRecyclerView
         android:id="@+id/searchPopRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipChildren="false">
 
-    </androidx.recyclerview.widget.RecyclerView>
+    </com.cnsukidayo.englishtoolandroid.myview.WrapRecyclerView>
 
 </RelativeLayout>
