--- a/app/src/main/res/layout/activity_learn_page.xml
+++ b/app/src/main/res/layout/activity_learn_page.xml
@@ -15,25 +15,21 @@
         android:orientation="horizontal"
         android:paddingBottom="-2dp">
 
-        <Button
+        <ImageButton
             android:id="@+id/back"
+            android:src="@drawable/back"
+            android:scaleType="fitCenter"
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/back_fillet"
-            android:gravity="left|center_vertical"
-            android:minHeight="35dp"
-            android:text="〈"
-            android:textColor="@color/colorBlack"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:ignore="RtlHardcoded" />
+            android:layout_width="35dp"
+            android:layout_height="45dp"
+            android:background="@drawable/back_fillet" />
 
         <HorizontalScrollView
             android:id="@+id/topBarHorizontalScrollView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingEnd="10dp">
+            android:paddingEnd="10dp"
+            tools:ignore="RtlSymmetry">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -70,30 +66,6 @@
 
             </LinearLayout>
         </HorizontalScrollView>
-        <!--        <TableLayout-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="center"-->
-        <!--            android:layout_weight="0.3"-->
-        <!--            android:orientation="horizontal">-->
-
-        <!--            <TableRow>-->
-
-        <!--                <CheckBox-->
-        <!--                    android:id="@+id/canScrollContainer"-->
-        <!--                    android:layout_gravity="center"-->
-        <!--                    android:checked="true" />-->
-
-        <!--                <TextView-->
-        <!--                    android:layout_width="wrap_content"-->
-        <!--                    android:layout_gravity="center"-->
-        <!--                    android:layout_weight="10"-->
-        <!--                    android:width="0dp"-->
-        <!--                    android:text="允许中文输入框自动延伸?"-->
-        <!--                    android:textColor="@color/colorBlack" />-->
-        <!--            </TableRow>-->
-
-        <!--        </TableLayout>-->
     </LinearLayout>
 
     <TableLayout
