--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000</color>
+    <color name="colorPink">#FFB6C1</color>
+    <color name="colorViolet">#EE82EE</color>
+    <color name="colorYellow">#FFFF00</color>
     <color name="colorNotChooseJsonButtonGreen">#7AFF8B</color>
     <color name="colorChooseJsonButtonRed">#FF2F6B</color>
     <color name="colorChooseJsonCheckBoxBlue">#4AFFE6</color>
@@ -21,4 +24,7 @@
     <color name="colorThisFlagTrue">#41B01E</color>
     <color name="colorThisFlagFalse">#FF695D</color>
     <color name="colorStartFlagMode">#FF19E0</color>
+    <color name="android_holo_red_light">@android:color/holo_red_light</color>
+    <color name="android_holo_blue_light">@android:color/holo_blue_light</color>
+    <color name="android_holo_orange_light">@android:color/holo_orange_light</color>
 </resources>
