--- a/app/src/main/res/layout/chaos_mode_color_pop.xml
+++ b/app/src/main/res/layout/chaos_mode_color_pop.xml
@@ -7,14 +7,14 @@
     android:theme="@android:style/Theme.Translucent">
 
     <TextView
-        android:id="@+id/markGREEN"
+        android:id="@+id/unChaos"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:background="@color/colorThisFlagTrue"
+        android:background="@color/colorGray"
         android:gravity="center"
-        android:text="解除标记"
+        android:text="关闭混沌模式"
         android:textColor="@color/colorBlack"
-        android:textSize="20sp" />
+        android:textSize="17sp" />
 
     <View
         android:layout_width="match_parent"
