1.单词归纳功能完毕 2.下个版本做出单词归纳的序列化与反序列化

--- a/app/src/main/res/layout/activity_learn_page.xml
+++ b/app/src/main/res/layout/activity_learn_page.xml
@@ -64,6 +64,12 @@
                     android:layout_height="wrap_content"
                     android:text="区域随机" />
 
+                <Button
+                    android:id="@+id/induceWord"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="单词归纳" />
+
             </LinearLayout>
         </HorizontalScrollView>
     </LinearLayout>
