--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -95,7 +95,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@color/colorWhite">
+            android:background="@color/colorWhite"
+            tools:ignore="NotSibling">
 
             <LinearLayout
                 android:layout_width="wrap_content"
