--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="colorChooseJsonCheckBoxBlue">#4AFFE6</color>
     <color name="colorNotChooseJsonCheckBoxBlue">@android:color/darker_gray</color>
     <color name="colorGray">#FF888888</color>
+    <color name="colorShallowGray">#C7C7C7</color>
     <color name="colorLeanPageBackGround">#6DFF56</color>
     <color name="colorTrueColor">#336DFF</color>
     <color name="colorFalseColor">#FF0000</color>
