1.单词分类功能完成

--- a/app/src/main/res/layout/include_word_element.xml
+++ b/app/src/main/res/layout/include_word_element.xml
@@ -65,6 +65,15 @@
             android:layout_height="wrap_content">
 
             <ImageButton
+                android:id="@+id/edit"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:scaleType="fitCenter"
+                android:src="@drawable/edit" />
+
+            <ImageButton
                 android:id="@+id/moveUp"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="40dp"
