--- a/app/src/main/res/layout/include_word_element.xml
+++ b/app/src/main/res/layout/include_word_element.xml
@@ -117,10 +117,12 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/colorNotChooseJsonCheckBoxBlue" />
+        android:layout_height="0.8dp"
+        android:layout_above="@+id/controlWordRelativeLayout"
+        android:background="@color/colorOrange" />
 
     <RelativeLayout
+        android:id="@+id/controlWordRelativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/open">
