1.更友好的背词界面 2.新增顺序背词、纯背介词、背诵模式

--- a/app/src/main/res/layout/activity_learn_page.xml
+++ b/app/src/main/res/layout/activity_learn_page.xml
@@ -231,16 +231,17 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:clipChildren="false"
+            android:paddingStart="5dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/chineseInputRecyclerView"
+            <com.cnsukidayo.englishtoolandroid.myview.WrapRecyclerView
+                android:id="@+id/chineseDisplayRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipChildren="false">
 
-            </androidx.recyclerview.widget.RecyclerView>
+            </com.cnsukidayo.englishtoolandroid.myview.WrapRecyclerView>
         </RelativeLayout>
     </HorizontalScrollView>
 
