--- a/app/src/main/res/layout/activity_learn_page_chinese_input.xml
+++ b/app/src/main/res/layout/activity_learn_page_chinese_input.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:clipChildren="false"
@@ -16,38 +16,23 @@
                 android:id="@+id/partOfSpeechTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:gravity="center_horizontal"
                 android:minEms="2"
-                android:text="词性"
+                android:text="PartOfSpeech."
                 android:textColor="@color/colorBlack"
                 android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/chineseInputText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/partOfSpeechTextView"
-                android:background="@drawable/chinese_input_fillet"
-                android:hint="在这里输入中文"
-                android:isScrollContainer="true"
-                android:minWidth="250dp"
-                android:singleLine="true"
-                android:textColor="@color/colorBlack"
-                android:textCursorDrawable="@drawable/input_cursor"
-                android:textSize="28sp" />
 
             <TextView
                 android:id="@+id/chineseAnswerTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="8dp"
-                android:layout_toRightOf="@id/chineseInputText"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@id/partOfSpeechTextView"
                 android:background="@drawable/chinese_answer_background"
                 android:gravity="left|center_vertical"
                 android:singleLine="true"
-                android:text="答答答答答答答答"
+                android:text="chinese"
                 android:textColor="@color/colorBlack"
                 android:textSize="20sp" />
         </RelativeLayout>
