--- a/app/src/main/res/layout/change_mod_pop.xml
+++ b/app/src/main/res/layout/change_mod_pop.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/dictation"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="听写模式"
         android:gravity="center"
+        android:text="听写模式"
         android:textColor="@color/colorBlack"
         android:textSize="16sp" />
 
@@ -23,8 +23,8 @@
         android:id="@+id/chineseEnglishTranslate"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="英译中模式"
         android:gravity="center"
+        android:text="英译中模式"
         android:textColor="@color/colorBlack"
         android:textSize="16sp" />
 
@@ -46,13 +46,28 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/colorNotChooseJsonCheckBoxBlue" />
+
+    <TextView
+        android:id="@+id/onlyRecite"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="背诵模式"
+        android:textColor="@color/colorBlack"
+        android:textSize="16sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorNotChooseJsonCheckBoxBlue" />
+
     <TextView
         android:id="@+id/preViewEnglish"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:background="@drawable/pre_view_english_mod_fillet"
         android:gravity="center"
         android:text="预览英文"
-        android:background="@drawable/pre_view_english_mod_fillet"
         android:textColor="@color/colorBlack"
         android:textSize="16sp" />
 </LinearLayout>
