--- a/app/src/main/res/layout/include_word_control_element.xml
+++ b/app/src/main/res/layout/include_word_control_element.xml
@@ -4,11 +4,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/colorNotChooseJsonCheckBoxBlue" />
-
     <RelativeLayout
         android:id="@+id/playEventRelativeLayout"
         android:layout_width="wrap_content"
@@ -68,8 +63,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-5dp"
-        android:paddingEnd="8dp"
-        android:clipChildren="true">
+        android:clipChildren="true"
+        android:paddingEnd="8dp">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -83,5 +78,9 @@
         </RelativeLayout>
     </HorizontalScrollView>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorNotChooseJsonCheckBoxBlue" />
 
 </LinearLayout>
