--- a/app/src/main/res/layout/activity_learn_page.xml
+++ b/app/src/main/res/layout/activity_learn_page.xml
@@ -162,7 +162,7 @@
                 android:text="上一个" />
 
             <Button
-                android:id="@+id/playButton"
+                android:id="@+id/checkButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="播放" />
