--- a/app/src/main/res/layout/activity_time_record.xml
+++ b/app/src/main/res/layout/activity_time_record.xml
@@ -296,7 +296,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorNotChooseJsonButtonGreen"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <RelativeLayout
             android:layout_width="wrap_content"
